Fixed spacing issue in About Us page

--- a/src/app/about-us-page/about-us-page.component.css
+++ b/src/app/about-us-page/about-us-page.component.css
@@ -30,6 +30,7 @@
     line-height: 20px;
     letter-spacing: 0.1em;
     color: #FFFFFF;
+    padding-top: 10px;
 }
 
 .subHeading {
